<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ojeda.manuel.petagram.Menu.Contacto">

    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar"
        ></include>

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/miActionBar"
        android:hint="@string/nombre_hint"
        android:paddingTop="25dp"
        />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNombre"
        android:hint="@string/correo_hint"
        />

    <EditText
        android:id="@+id/etMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etCorreo"
        android:hint="@string/mensaje_hint"
        />

    <Button
        android:id="@+id/btEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_enviar"
        android:theme="@style/botonEnviar"
        android:onClick="enviarEmail"
        />

</LinearLayout>
